Added styling to popup, renamed to touch of invisibility

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,29 @@
 :root {
-  --flatironcolor: #13B4E7;
+  --mistblue: #296171;
+}
+
+label {
+  animation: appear 1s;
+  color: var(--mistblue)
+}
+
+@keyframes appear {
+  0% {opacity: 0}
+  100% {opacity: 1}
 }
 
 body {
+  background-color: black;
+  background-image: url("https://i.pinimg.com/originals/18/81/b7/1881b7b391bda6d82183d5a33c83699a.jpg");
+  background-size: cover;
+  background-position: top;
   min-width: 300px;
 }
 
 h3 {
   text-align: center;
   color: white;
-  background: var(--flatironcolor);
-}
-
-input[type=text] {
-  width: 4em;
-  text-align: right;
+  background: var(--mistblue);
 }
 
 /* The switch - the box around the slider */
@@ -58,11 +67,11 @@ input[type=text] {
 }
 
 input:checked + .slider {
- background-color: var(--flatironcolor);
+ background-color: var(--mistblue);
 }
 
 input:focus + .slider {
- box-shadow: 0 0 1px var(--flatironcolor);
+ box-shadow: 0 0 1px var(--mistblue);
 }
 
 input:checked + .slider:before {
@@ -80,6 +89,8 @@ input:checked + .slider:before {
  border-radius: 50%;
 }
 
-#timer-active-container {
-  text-align: right;
+#helper-text {
+  opacity: 0;
+  transition: opacity 1s;
+  animation: none;
 }
